--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -37,7 +37,7 @@
                                             {{"Back" | localize}}
                                         </a>
 
-                                        <button class="btn btn-brand" (click)="RedirectToAddNewItem()"><i
+                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNewItem()"><i
                                             class="fa fa-plus"></i>
                                         {{"AddNew" | localize}}</button>
 
@@ -106,10 +106,11 @@
                             </p-table>
 
                         </div>
-                        <!--<Primeng-TurboTable-End> {{i.creationTime | date:'d MMM EEE'}} -->
+                        <!--<Primeng-TurboTable-End> {{i.creationTime | date:'d MMM EEE'}} 
+                          class="{{item.isDeleted == true ? 'warnning' : '' }}"  -->
                         <table class="table record-table">
                             <tbody *ngFor="let item of itemList">
-                                <tr  class="task-table-inner table-repeater" class="{{item.isDeleted == true ? 'warnning' : '' }}">
+                                <tr  class="task-table-inner table-repeater" >
                                     <td class="accountNo-cell">
                                         <span class="">{{item.startDate | date}}</span>
                                     </td>
@@ -260,7 +261,7 @@
                         <div class="col-md-6">
 
 
-                            <div class="form-group giveCommentView" *ngIf="commantBox">
+                            <div [ngClass]="{'disabled':!monthStatus}" class="form-group giveCommentView" *ngIf="commantBox">
                                 <label>{{"Comments" | localize}}</label>
                                 <div (click)="commentClick()">
                                     <div class="kt-user-card-v2">
@@ -435,7 +436,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="Check-reconcile-btn">
+                            <div [ngClass]="{'disabled':!monthStatus}"  class="Check-reconcile-btn">
                                 <button (click)="reconciledClick()" class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
