Build error resolved

--- a/angular/src/account/register/register-tenant-result.component.html
+++ b/angular/src/account/register/register-tenant-result.component.html
@@ -1,5 +1,4 @@
-
-<div class=""style="padding:10% 30%">
+<div style="padding:10% 30%">
     <div class="kt-container kt-grid__item kt-grid__item--fluid py-5">
         <div class="kt-portlet py-5">
             <div class="d-flex justify-content-center"> 
