--- a/angular/src/account/register/tenant-register-user-result.component.html
+++ b/angular/src/account/register/tenant-register-user-result.component.html
@@ -1,4 +1,4 @@
-<div class=""style="padding:10% 30%">
+<div style="padding:10% 30%">
     <div class="kt-container kt-grid__item kt-grid__item--fluid py-5">
         <div class="kt-portlet py-5">
             <div class="d-flex justify-content-center"> 
@@ -8,14 +8,12 @@
                 <img src="./assets/media/ClosingCheckList/success.png" alt="block-btn">                  
             </div>
             <div class="d-flex justify-content-center"> 
-                <h5>Please check your email</h5>
-                
+                <h5>Please Check your Email</h5>
             </div>
             <div class="d-flex justify-content-center"> 
-                <p><a routerLink="/account/login" 
-                    class="text-black"><u>Go to Log In</u></a>
-                </p>
-                
+                <a  routerLink="/account/login"
+                        >Go to LogIn</a>
+
             </div>
         </div>
     </div>
