--- a/angular/src/account/register/tenant-user-register.component.html
+++ b/angular/src/account/register/tenant-user-register.component.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-end mr-5">
-                            <button class="btn btn-success" (click)="register()" (click)="save()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                            <button class="btn btn-success" (click)="register()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 Save
                             </button>
                         </div>
