--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -229,7 +229,7 @@
                                             <div class="activity-inner-b mb-3">
                                                 <div class="mb-2 notification-line1">
                                                     <span>{{i.result.ChangeOccurUser.name}}</span> Changed the
-                                                    <span>Version</span>
+                                                    <span>Instruction</span>
                                                     {{i.changeTime | momentFormat:'Do MMM YY LT'}}
                                                     <a *ngIf="!isDeleted == true" class="action-btn btn-pointer" (click)="rollBackInstruction(i.id)"><img
                                                         src="../../../../assets/img/dup.svg"></a>
