--- a/angular/src/app/shared/layout/nav/side-bar-menu.component.html
+++ b/angular/src/app/shared/layout/nav/side-bar-menu.component.html
@@ -93,9 +93,9 @@
 </ng-template>
 <!-- END: Left Aside -->
 
-<span Style="position:absolute;bottom:0px;">
+<span Style="position:absolute;bottom:0px;"*ngIf="!copyright">
     <div class="kt-footer kt-grid__item" id="kt_footer">
-        <div [class]="containerClass" *ngIf="useBottomDiv">
+        <div [class]="containerClass">
             <div class="kt-footer__bottom">
                 <div class="kt-footer__copyright">
                     
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div [class]="containerClass" *ngIf="!useBottomDiv">
+        <!-- <div [class]="containerClass" *ngIf="!useBottomDiv">
             <div class="kt-footer__wrapper">
                 <div class="kt-footer__copyright">
                     
@@ -124,6 +124,6 @@
                 <div class="kt-footer__menu">
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>         
 </span>
